feature: add daily reminders for all users (#22)
* feature: add daily reminders for all users

* chore: spotless

* chore: refactor